--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="js/app.js" async defer></script>
+        <script src="js/for.js" async defer></script>
+        <script src="js/while.js" async defer></script>
     </body>
 </html>
